<resources>
    <string name="app_name">ScheduleUI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh_menu_item">Làm mới</string>
    <string name="goToMenuItem">Đi đến ...</string>
    <string name="addRemindMenuItem">Thêm nhắc nhở</string>
    <string name="txtNameHint">Môn học</string>
    <string name="timeTitle">Thời gian</string>
    <string name="loopTitle">Lặp lại</string>
    <string name="optionT2">T2</string>
    <string name="optionT3">T3</string>
    <string name="optionT4">T4</string>
    <string name="optionT5">T5</string>
    <string name="optionT6">T6</string>
    <string name="optionT7">T7</string>
    <string name="optionCN">CN</string>
    <string name="txtLocationHint">Địa điểm</string>
    <string name="txtNodeHint">Ghi chú</string>
    <string name="txtTeacherHint">Giảng viên</string>
    <string name="saveMenuItem">LƯU</string>
    <string name="TKB">Thời khóa biểu</string>
    <string name="LCV">Lịch công việc</string>
    <string name="TB">Thông báo</string>
    <string name="TL">Thiết lập</string>
    <string name="labelNameSettingTitle">NHÃN TÊN</string>
    <string name="nameSettingTitle">Tên</string>
    <string name="schoolSettingTitle">Trường</string>
    <string name="typeOfScheduleTitle">Loại</string>
    <string name="warnTitle">Cảnh báo</string>
    <string name="warningValue">Loại Bảng biểu và Dòng thời gian là khác như. Khi thay đổi dữ liệu được nhập ở Bảng biểu sẽ không hiển thị ở Dòng thời gian và ngược lại</string>
    <string name="expandSettingTitle">(Chỉ loại Bảng biểu)</string>
    <string name="typeOfDisplayTitle">Kiểu hiển thị</string>
    <string name="subjectDisplayTitle">Hiển thị môn học</string>
    <string name="widgetSettingTitle">WIDGET (TIỆN ÍCH)</string>
    <string name="opacitySetting">Độ trong suốt của nền (%)</string>
    <string name="widgetNoteTitle">Hiển thị lên màn hình chính</string>
    <string name="widgetNoteValue">Tại màn hình chính, nhấn vào cùng trống giữ vài giây cho đến khi xuất hiện chữ WIDGET (TIỆN ÍCH). Chọn widget là Thời Khóa Biểu, kéo biểu tượng Thời Khóa Biểu thảo vào vùng trống màn hình chính</string>
    <string name="noJobOrRequest">Không có sự kiện hoặc nhiệm vụ nào</string>
    <string name="loopContentTemplate">Lặp lại vào %s, mỗi tuần, từ %s đến %s. Có hiệu lực từ %s đến %s</string>
    <string name="txtNotificationNameHint">Tên thông báo</string>
    <string name="txtNotificationContentHint">Nội dung</string>
    <string name="timeNotificationTitle">Thời gian thông báo</string>
    <string name="loopOption0">Không lặp lại</string>
    <string name="loopOption1">Hằng ngày</string>
    <string name="loopOption2">Hằng tuần</string>
    <string name="loopOption3">Hằng tháng</string>
    <string name="loopOption4">Hằng năm</string>
    <string name="txtJobTitleHint">Tựa đề</string>
    <string name="timeJobTitle">Cả ngày</string>
    <string name="addJobMenuItemTitle">Thêm công việc</string>
    <string name="addRequestMenuItemTitle">Thêm nhiệm vụ</string>
    <string name="navViewTitle">THỜI KHÓA BIỂU</string>
    <string name="manageJobMenuItemTitle">Quản lý sự kiện</string>
    <string name="nameSettingDefault">Not set</string>
    <string name="deleteMenuItemTitle">Xóa</string>
    <string name="editMenuItemTitle">Sửa</string>
    <string name="before_7_days">7 ngày trước</string>
    <string name="after_7_days">7 ngày sau</string>
    <string name="today">Hôm nay</string>

    <!-- String array -->
    <string-array name="typeOfSchedule">
        <item>Dòng thời gian</item>
        <item>Bảng biểu</item>
    </string-array>
    <string-array name="typeOfDisplay">
        <item>Buổi sáng</item>
        <item>Buổi chiều</item>
        <item>Cả hai</item>
    </string-array>
    <string-array name="subjectDisplay">
        <item>Chiều ngang</item>
        <item>Chiều dọc</item>
    </string-array>
    <string-array name="dayOfWeeks">
        <item>Chủ nhật</item>
        <item>Thứ hai</item>
        <item>Thứ ba</item>
        <item>Thứ tư</item>
        <item>Thứ năm</item>
        <item>Thứ sáu</item>
        <item>Thứ bảy</item>
    </string-array>
</resources>