<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.fragment.SettingFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/labelNameSetting"
                style="@style/settingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelNameSettingTitle"
                app:drawableStartCompat="@drawable/baseline_person_36"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameTitle"
                style="@style/subSettingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nameSettingTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelNameSetting" />

            <TextView
                android:id="@+id/nameValue"
                style="@style/subSettingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTitle"
                tools:text="Not set" />

            <TextView
                android:id="@+id/schoolTitle"
                style="@style/subSettingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/schoolSettingTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameValue" />

            <TextView
                android:id="@+id/schoolValue"
                style="@style/subSettingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/schoolTitle"
                tools:text="Not set" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/schoolValue" />


            <TextView
                android:id="@+id/widgetSetting"
                style="@style/settingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/widgetSettingTitle"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/baseline_widgets_36"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <TextView
                android:id="@+id/opacityTitle"
                style="@style/subSettingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/TKB"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/widgetSetting" />

            <TextView
                android:id="@+id/opacityValue"
                style="@style/subSettingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/opacitySetting"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/opacityTitle" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/opacityPercent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/opacityValue" />

            <TextView
                android:id="@+id/widgetNoteTitle"
                style="@style/subSettingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/widgetNoteTitle"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/opacityPercent" />

            <TextView
                android:id="@+id/widgetNoteValue"
                style="@style/subSettingValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="100dp"
                android:text="@string/widgetNoteValue"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/widgetNoteTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>