<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notification.fragment.AddNotificationFragment">

    <EditText
        android:id="@+id/txtName"
        style="@style/TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:drawableStart="@drawable/baseline_title_24"
        android:hint="@string/txtNotificationNameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtContent"
        style="@style/TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:drawableStart="@drawable/baseline_notes_24"
        android:hint="@string/txtNotificationContentHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContent" />

    <TextView
        android:id="@+id/timeTitle"
        style="@style/TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/timeNotificationTitle"
        app:drawableStartCompat="@drawable/baseline_access_time_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <Button
        android:id="@+id/day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeTitle"
        tools:text="THỨ TƯ, 20/09/2023" />

    <Button
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@id/timeTitle"
        tools:text="22:38" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/line3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/loopTitle"
        style="@style/TextInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/loopTitle"
        app:drawableStartCompat="@drawable/baseline_refresh_24"
        app:layout_constraintBottom_toTopOf="@+id/line4"
        app:layout_constraintEnd_toStartOf="@id/loopOption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <ToggleButton
        android:id="@+id/loopOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:textColor="@color/blue"
        android:textOff="@string/loopOption0"
        android:textOn="@string/loopOption1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/loopTitle"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/line4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loopOption" />
</androidx.constraintlayout.widget.ConstraintLayout>