<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.jobschedulescreen.fragment.AddJobScheduleFragment">

    <EditText
        android:id="@+id/title"
        style="@style/TextInput"
        android:background="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:drawableStart="@drawable/baseline_title_24"
        android:hint="@string/txtJobTitleHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/timeTitle"
        style="@style/TextInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/timeJobTitle"
        app:drawableStartCompat="@drawable/baseline_access_time_24"
        app:layout_constraintBottom_toTopOf="@+id/btnDayStart"
        app:layout_constraintEnd_toEndOf="@id/isFullDay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/isFullDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <Button
        android:id="@+id/btnDayStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/btnTimeStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isFullDay"
        tools:text="Thứ tư, 20/09/2023" />

    <Button
        android:id="@+id/btnTimeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isFullDay"
        tools:text="22:10" />

    <Button
        android:id="@+id/btnDayEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/btnTimeEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDayStart"
        tools:text="Thứ tư, 20/09/2023" />

    <Button
        android:id="@+id/btnTimeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDayStart"
        tools:text="23:10" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDayEnd" />

    <TextView
        android:id="@+id/loopTitle"
        style="@style/TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loopTitle"
        app:drawableStartCompat="@drawable/baseline_refresh_24"
        app:layout_constraintEnd_toStartOf="@id/loopOption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <TextView
        android:id="@+id/loopOption"
        style="@style/TextInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/loopOption0"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <!--todo tìm cách khác để tạo check box với text bên trên-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dayLoopLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="30dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loopTitle">

        <LinearLayout
            android:id="@+id/optionT2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/optionT3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionT2" />

            <CheckBox
                android:id="@+id/cbxT2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionT3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/optionT4"
            app:layout_constraintStart_toEndOf="@+id/optionT2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionT3" />

            <CheckBox
                android:id="@+id/cbxT3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionT4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/optionT5"
            app:layout_constraintStart_toEndOf="@+id/optionT3"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionT4" />

            <CheckBox
                android:id="@+id/cbxT4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionT5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/optionT6"
            app:layout_constraintStart_toEndOf="@+id/optionT4"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionT5" />

            <CheckBox
                android:id="@+id/cbxT5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionT6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/optionT7"
            app:layout_constraintStart_toEndOf="@+id/optionT5"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionT6" />

            <CheckBox
                android:id="@+id/cbxT6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionT7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/optionCN"
            app:layout_constraintStart_toEndOf="@+id/optionT6"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionT7" />

            <CheckBox
                android:id="@+id/cbxT7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionCN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/optionT7"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionCN" />

            <CheckBox
                android:id="@+id/cbxCN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/loopContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="#005DCD"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dayLoopLayout"
        tools:text="Lặp lại vào Thứ tư, mỗi tuần, từ 9:30 đến 9:30. Có hiệu lực từ 13/09/2023 đến 13/09/2023" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/line3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loopContent" />

    <EditText
        android:id="@+id/location"
        style="@style/TextInput"
        android:background="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:drawableStart="@drawable/baseline_location_on_24"
        android:hint="@string/txtLocationHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/line4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location" />

    <EditText
        android:id="@+id/notes"
        style="@style/TextInput"
        android:background="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:drawableStart="@drawable/baseline_notes_24"
        android:hint="@string/txtNodeHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line4" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/line5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes" />
</androidx.constraintlayout.widget.ConstraintLayout>